--- a/client/package.json
+++ b/client/package.json
@@ -18,10 +18,12 @@
     "react": "^18.2.0",
     "react-chips": "^0.8.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.3",
     "react-lottie": "^1.2.3",
     "react-notification-badge": "^1.5.1",
-    "react-router-dom": "^5.3.4",
+    "react-router-dom": "^6.10.0",
     "react-scrollable-feed": "^1.3.2",
+    "rsup-progress": "^3.0.0",
     "socket.io-client": "^4.6.1"
   },
   "devDependencies": {
